--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="theme-color" content="lightgrey" />
+  <meta name="theme-color" content="#5a3779" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,6 +25,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <!--Font awesome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+  <!--Google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Lato|Lilita+One|Roboto|Fjalla+One" rel="stylesheet">
   <title>Dad Overflow</title>
 </head>
 
@@ -54,7 +56,7 @@
     <div class="container">
       <div class="row">
         <div class="col s-12">
-          Made by Team Raphael
+          Made with love by Team Raphael
         </div>
       </div>
     </div>
