--- a/client/public/index.html
+++ b/client/public/index.html
@@ -53,7 +53,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <footer class="black-text white page-footer">
+  <footer class="white-text blue-grey darken-3 page-footer">
     <div class="container">
       <div class="row">
         <div class="col s-12 center-align remove-float">
