Adding new favicon shortcut.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon4.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#344955" />
   <!--
@@ -53,7 +53,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <footer class="white-text blue-grey darken-3 page-footer">
+  <footer id="page-footer" class="white-text blue-grey darken-3">
     <div class="container">
       <div class="row">
         <div class="col s-12 center-align remove-float">
