--- a/client/public/index.html
+++ b/client/public/index.html
@@ -62,7 +62,7 @@
       </div>
       <div class="row">
         <div class="col s-12 center-align remove-float">
-          <div>Icons made by <a href="http://www.freepik.com/" target="_blank" title="Freepik">Freepik</a> from <a
+          <div id='footer'>Icons made by <a href="http://www.freepik.com/" target="_blank" title="Freepik">Freepik</a> from <a
               href="https://www.flaticon.com/" target="_blank" title="Flaticon">www.flaticon.com</a> is licensed by <a
               href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0
               BY</a></div>
