--- a/client/public/index.html
+++ b/client/public/index.html
@@ -41,6 +41,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
   <script>
     var ioSocket = io();
+
+    $(document).ready(() => {
+      ioSocket.on('message', function (msg) {
+        M.toast({ html: msg });
+      });
+    });
   </script>
   <div id="root"></div>
   <!--
@@ -62,9 +68,10 @@
       </div>
       <div class="row">
         <div class="col s-12 center-align remove-float">
-          <div id='footer'>Icons made by <a href="http://www.freepik.com/" target="_blank" title="Freepik">Freepik</a> from <a
-              href="https://www.flaticon.com/" target="_blank" title="Flaticon">www.flaticon.com</a> is licensed by <a
-              href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0
+          <div id='footer'>Icons made by <a href="http://www.freepik.com/" target="_blank" title="Freepik">Freepik</a>
+            from <a href="https://www.flaticon.com/" target="_blank" title="Flaticon">www.flaticon.com</a> is licensed
+            by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC
+              3.0
               BY</a></div>
         </div>
       </div>
