--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,7 @@
   <title>Dad Overflow</title>
 </head>
 
-<body>
+<body class="customScrollBar">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <!--JQuery-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
