adding_ Made with love by Dads Like You

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -63,7 +63,7 @@
     <div class="container">
       <div class="row">
         <div class="col s-12 center-align remove-float">
-          Made with love by Team Raphael
+          Made with love by Dads Like You
         </div>
       </div>
       <div class="row">
